force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__AccentIconDisabledFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AccentIconDisabledFontColor__c</fullName>
        <label>Icon Disabled Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>