force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__AccentIconFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AccentIconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>