force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__AccentIconHoverFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AccentIconHoverFontColor__c</fullName>
        <label>Icon Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>