force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeBackgroundColor__c</fullName>
        <inlineHelpText>Background color of badges</inlineHelpText>
        <label>Badge Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>