force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeBorderColor__c</fullName>
        <inlineHelpText>Border color of badges</inlineHelpText>
        <label>Badge Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>