force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeBorderStyle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeBorderStyle__c</fullName>
        <inlineHelpText>Border style of badges (Click the icon for additional information)</inlineHelpText>
        <label>Badge Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>