force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeBorderWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeBorderWidth__c</fullName>
        <inlineHelpText>Border width of badges</inlineHelpText>
        <label>Badge Border Width</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>