force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeFontColor__c</fullName>
        <inlineHelpText>Font color of badges</inlineHelpText>
        <label>Badge Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>