force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BadgeFontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BadgeFontSize__c</fullName>
        <inlineHelpText>Font size of badges</inlineHelpText>
        <label>Badge Font Size</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>