force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BrandButtonBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BrandButtonBorderColor__c</fullName>
        <inlineHelpText>Border color of brand buttons</inlineHelpText>
        <label>Brand Button Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>