force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BrandButtonDisabledFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BrandButtonDisabledFontColor__c</fullName>
        <inlineHelpText>Font color of disabled brand buttons</inlineHelpText>
        <label>Brand Button Disabled Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>