force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BrandButtonFontFamily__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BrandButtonFontFamily__c</fullName>
        <inlineHelpText>Font family for brand buttons</inlineHelpText>
        <label>Brand Button Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>