force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BrandButtonHoverFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BrandButtonHoverFontColor__c</fullName>
        <inlineHelpText>Hover font color of brand buttons</inlineHelpText>
        <label>Brand Button Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>