force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BundleLayoutHeaderBgColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundleLayoutHeaderBgColor__c</fullName>
        <inlineHelpText>Background color of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>