force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BundleLayoutHeaderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundleLayoutHeaderColor__c</fullName>
        <inlineHelpText>Font color of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>