force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BundleLayoutHeaderFontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundleLayoutHeaderFontSize__c</fullName>
        <inlineHelpText>Font size of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Font Size</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>