force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BundleLayoutHeaderFontWeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundleLayoutHeaderFontWeight__c</fullName>
        <inlineHelpText>Font weight of the header displaying the bundle name (Click the icon for additional information)</inlineHelpText>
        <label>Bundle Layout Header Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                    <default>true</default>
                    <label>300</label>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>