force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__BundleLayoutHeaderTextDecoration__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundleLayoutHeaderTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in the header displaying the bundle name (Click the icon for additional information)</inlineHelpText>
        <label>Bundle Layout Header Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>