force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxBackgroundColorChecked__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxBackgroundColorChecked__c</fullName>
        <inlineHelpText>Background color of checked checkboxes</inlineHelpText>
        <label>Checkbox Background Color Checked</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>