force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxBackgroundColorUnchecked__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxBackgroundColorUnchecked__c</fullName>
        <inlineHelpText>Background color of unchecked checkboxes</inlineHelpText>
        <label>Checkbox Background Color Unchecked</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>