force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxBorderColor__c</fullName>
        <inlineHelpText>Border color of checkboxes</inlineHelpText>
        <label>Checkbox Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>