force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxBorderRadius__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxBorderRadius__c</fullName>
        <inlineHelpText>Border radius of checkboxes</inlineHelpText>
        <label>Checkbox Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>