force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxBorderWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxBorderWidth__c</fullName>
        <inlineHelpText>Border width of checkboxes</inlineHelpText>
        <label>Checkbox Border Width</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>