force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxCheckMarkColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxCheckMarkColor__c</fullName>
        <inlineHelpText>Checkmark color of checkboxes</inlineHelpText>
        <label>Checkbox Checkmark Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>