force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CheckboxSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckboxSize__c</fullName>
        <inlineHelpText>Size of checkboxes</inlineHelpText>
        <label>Checkbox Size</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>