force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__CompiledCSS__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompiledCSS__c</fullName>
        <label>Hidden Values</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </CustomField>