force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ComponentRowFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentRowFontColor__c</fullName>
        <inlineHelpText>Font color of component rows in quote line editor</inlineHelpText>
        <label>Component Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>