force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ComponentRowFontStyle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentRowFontStyle__c</fullName>
        <inlineHelpText>Font style of component rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Component Row Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>