force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfigurationAttributeLabelColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfigurationAttributeLabelColor__c</fullName>
        <inlineHelpText>Label color for configuration attributes</inlineHelpText>
        <label>Configuration Attribute Label Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>