force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfiguratorCustomActionBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorCustomActionBorderColor__c</fullName>
        <inlineHelpText>Border color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>