force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfiguratorCustomActionColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorCustomActionColor__c</fullName>
        <inlineHelpText>Background color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>