force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfiguratorCustomActionFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorCustomActionFontColor__c</fullName>
        <inlineHelpText>Font color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>