force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfiguratorCustomActionHoverColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorCustomActionHoverColor__c</fullName>
        <inlineHelpText>Hover color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>