force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ConfiguratorCustomActionHoverFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorCustomActionHoverFontColor__c</fullName>
        <inlineHelpText>Hover font color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>