force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DetailColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DetailColor__c</fullName>
        <inlineHelpText>Background color of filter side panels</inlineHelpText>
        <label>Filter Drawer Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>