force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogBackgroundColor__c</fullName>
        <inlineHelpText>Background color of pop-up modals</inlineHelpText>
        <label>Dialog Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>