force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogBorderRadius__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogBorderRadius__c</fullName>
        <inlineHelpText>Border radius of pop-up modal</inlineHelpText>
        <label>Dialog Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>