force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogCloseColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogCloseColor__c</fullName>
        <inlineHelpText>Color of pop-up modals on close</inlineHelpText>
        <label>Dialog Close Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>