force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogFooterBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogFooterBorderColor__c</fullName>
        <inlineHelpText>Border color of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>