force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogFooterBorderWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogFooterBorderWidth__c</fullName>
        <inlineHelpText>Border width of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Border Width</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>