force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__DialogFooterColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DialogFooterColor__c</fullName>
        <inlineHelpText>Background color of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>